Update frontend URL configuration in docker-compose and environment files. Adjust CORS settings and OAuth callback URLs in server.js to reflect the new frontend URL structure, enhancing consistency across the application.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL:-http://localhost:3000/api/auth/google/callback}
       - JWT_SECRET=${JWT_SECRET}
-      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:80}
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "node", "healthcheck.js"]
