--- a/env.example
+++ b/env.example
@@ -20,7 +20,7 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
 
 # Frontend Configuration
-FRONTEND_URL=http://localhost:80
+FRONTEND_URL=http://localhost
 BACKEND_URL=http://localhost:3000
 
 # Port Configuration
