--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --legacy-peer-deps
+da# Install dependencies (use npm install for Render compatibility)
+RUN npm install --legacy-peer-deps
 
 # Copy source code
 COPY . .
