--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-da# Install dependencies (use npm install for Render compatibility)
+# Install dependencies (use npm install for Render compatibility)
 RUN npm install --legacy-peer-deps
 
 # Copy source code
