--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,6 +28,9 @@ BACKEND_PORT=3000
 FRONTEND_PORT=80
 
 # Production URLs (Update these for production deployment)
-# FRONTEND_URL=https://yourdomain.com
-# BACKEND_URL=https://api.yourdomain.com
-# GOOGLE_CALLBACK_URL=https://api.yourdomain.com/api/auth/google/callback
+# FRONTEND_URL=https://your-frontend-app.onrender.com
+# BACKEND_URL=https://your-backend-app.onrender.com
+# GOOGLE_CALLBACK_URL=https://your-backend-app.onrender.com/api/auth/google/callback
+
+# Frontend Environment Variables (for Docker deployment)
+# BACKEND_URL=https://your-backend-app.onrender.com
